--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "dreamcommerce/appstore-bundle": "~1.4.5",
+        "dreamcommerce/appstore-bundle": "~1.4.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
